--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <body>
         <h1>Perkenalan Diri</h1>
         <p>Nama    : Satria Febriansyah S</p>
-        <p>Kelas   : X</p>
+        <p>Kelas   : X </p>
         <p>Sekolah : SMKN 6 KOTA BEKASI</p>
+        <p>Hobi    : Mempelelajari hal baru</p>
     </body>
 </html>
